Improve responsive design and mobile input

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="play">
           <div id="kana" class="kana">あ</div>
-          <input id="answer" class="answer" type="text" autocomplete="off" placeholder="romanización..." />
+          <input id="answer" class="answer" type="text" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" inputmode="latin" placeholder="romanización..." />
           <div id="feedback" class="feedback muted"></div>
         </div>
 
