--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
       </div>
     </div>
 
+    <script src="./data/hiragana.js" defer></script>
     <script src="./main.js" defer></script>
     <script>
       if ("serviceWorker" in navigator) {
