refactor: add sidebar layout and basic router

--- a/index.html
+++ b/index.html
@@ -6,163 +6,40 @@
     <title>Hiragana Rush — Typing Trainer</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="manifest" href="./manifest.webmanifest" />
-    <meta name="theme-color" content="#0b0f14" />
+    <meta name="theme-color" content="#0b0d12" />
     <meta name="description" content="Juego rápido para practicar Hiragana. Escribe la romanización antes de que el tiempo se acabe." />
   </head>
   <body>
-    <main class="container">
-      <!-- Start Screen -->
-      <section id="screen-start" class="screen">
-        <header class="hero">
-          <h1>Hiragana Rush</h1>
-          <p class="tagline">aprende + compite</p>
+    <div class="app">
+      <aside id="sidebar" role="navigation" aria-label="Modo de juego">
+        <div class="logo">Hiragana Rush</div>
+        <nav class="menu">
+          <button class="menu-item" data-mode="classic" aria-current="page">Clásico</button>
+          <button class="menu-item" data-mode="timeattack">Time Attack</button>
+          <button class="menu-item" data-mode="practice">Práctica</button>
+          <button class="menu-item" data-mode="custom">Personalizado</button>
+        </nav>
+        <div class="sidebar-footer">
+          <label class="switch">
+            <input id="themeToggle" type="checkbox" />
+            <span>🌙 Tema oscuro</span>
+          </label>
+        </div>
+      </aside>
+
+      <div class="shell">
+        <header class="topbar">
+          <button id="btnSidebar" aria-controls="sidebar" aria-expanded="true">☰</button>
+          <h1 id="viewTitle">Clásico</h1>
         </header>
 
-        <div class="card settings">
-          <div class="row">
-            <label for="mode">Modo</label>
-            <select id="mode">
-              <option value="survival">Supervivencia (3 vidas)</option>
-              <option value="time">Contrarreloj</option>
-            </select>
-            <small class="hint">Elige entre vidas limitadas o tiempo total.</small>
-          </div>
-
-          <div class="row">
-            <label for="difficulty">Dificultad</label>
-            <select id="difficulty">
-              <option value="easy">Fácil (gojūon básico)</option>
-              <option value="medium">Medio (+ dakuten / handakuten)</option>
-              <option value="hard">Difícil (+ yōon きゃ, しゃ, ちゃ...)</option>
-            </select>
-            <small class="hint">Añade más kana para subir el reto.</small>
-          </div>
-
-          <div class="row">
-            <label for="timePerChar">Tiempo por carácter</label>
-            <select id="timePerChar">
-              <option value="6">6 s</option>
-              <option value="8">8 s</option>
-              <option value="10" selected>10 s</option>
-              <option value="12">12 s</option>
-            </select>
-            <small class="hint">Tiempo límite para cada kana.</small>
-          </div>
-
-          <div class="row" id="timeAttackRow" hidden>
-            <label for="timeAttackTotal">Tiempo total (s)</label>
-            <input id="timeAttackTotal" type="number" min="10" max="300" step="10" value="60" />
-            <small class="hint">Disponible en Contrarreloj.</small>
-          </div>
-
-          <div class="row inline">
-            <label class="switch">
-              <input type="checkbox" id="permissive" checked />
-              <span class="slider"></span>
-            </label>
-            <span>Permisivo (shi/si, chi/ti...)</span>
-          </div>
-          <div class="row inline">
-            <label class="switch">
-              <input type="checkbox" id="soundEnabled" checked />
-              <span class="slider"></span>
-            </label>
-            <span>Sonidos</span>
-          </div>
-          <div class="row inline">
-            <label class="switch">
-              <input type="checkbox" id="showQueue" />
-              <span class="slider"></span>
-            </label>
-            <span>Mostrar cola</span>
-          </div>
-
-          <div class="row">
-            <label for="theme">Tema</label>
-            <select id="theme">
-              <option value="auto" selected>Auto</option>
-              <option value="dark">Oscuro</option>
-              <option value="light">Claro</option>
-            </select>
-            <small class="hint">Seguir sistema o forzar tema.</small>
-          </div>
-        </div>
-
-        <button id="btn-start" class="primary start-fixed">Comenzar</button>
-      </section>
-
-      <!-- Game Screen -->
-      <section id="screen-game" class="screen hidden">
-        <header class="hud">
-          <div class="stat"><span class="label">Puntos</span><span id="score">0</span></div>
-          <div class="stat"><span class="label">Combo</span><span id="combo">0</span></div>
-          <div class="stat"><span class="label" id="livesLabel">Vidas</span><span id="lives">3</span></div>
-          <div class="stat" id="timeBox" hidden><span class="label">Tiempo</span><span id="timeLeft">60</span>s</div>
-        </header>
-
-        <div class="timer">
-          <div id="timerFill"></div>
-        </div>
-
-        <div id="nextQueue" class="queue" hidden></div>
-
-        <div class="play">
-          <div id="kana" class="kana">あ</div>
-          <p id="inputHint" class="sr-only">Escribe la romanización y presiona Enter para validar.</p>
-          <input id="answer" class="answer" type="text" autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false" inputmode="latin" placeholder="romanización..." aria-describedby="inputHint" />
-          <div id="toast" class="toast" role="status" aria-live="polite"></div>
-        </div>
-
-        <footer class="controls">
-          <button id="btn-quit" class="ghost">Salir</button>
-        </footer>
-
-        <div id="pauseOverlay" class="overlay hidden" role="dialog" aria-modal="true">
-          <div class="modal">
-            <p>Pausa</p>
-            <small>Presiona Esc para continuar</small>
-          </div>
-        </div>
-      </section>
-
-      <!-- Result Screen -->
-      <section id="screen-result" class="screen hidden">
-        <h2>Resultado</h2>
-        <div class="card results">
-          <div><span class="label">Puntos</span><span id="rScore">0</span></div>
-          <div><span class="label">Aciertos</span><span id="rHits">0</span></div>
-          <div><span class="label">Fallos</span><span id="rMiss">0</span></div>
-          <div><span class="label">Precisión</span><span id="rAcc">0%</span></div>
-          <div><span class="label">Combo máximo</span><span id="rCombo">0</span></div>
-          <div><span class="label">Tiempo jugado</span><span id="rTime">0s</span></div>
-        </div>
-
-        <h3>Top 5 (local)</h3>
-        <ol id="highscores" class="hiscore"></ol>
-
-        <div class="actions">
-          <button id="btn-retry" class="primary">Reintentar</button>
-          <button id="btn-home" class="ghost">Inicio</button>
-        </div>
-      </section>
-    </main>
-
-    <div id="onboard" class="overlay hidden" role="dialog" aria-modal="true">
-      <div class="modal">
-        <div id="onboardStep1" class="onboard-step">
-          <p>Escribe la romanización usando letras latinas. Ej: し → shi</p>
-          <button id="onboardNext" class="primary">Siguiente</button>
-        </div>
-        <div id="onboardStep2" class="onboard-step hidden">
-          <p>Cada carácter tiene un límite de tiempo. En Supervivencia tienes 3 vidas.</p>
-          <label class="row inline"><input type="checkbox" id="onboardSkip" /> No volver a mostrar</label>
-          <button id="onboardDone" class="primary">Listo</button>
-        </div>
+        <main id="mainView" tabindex="-1"></main>
       </div>
     </div>
 
     <script src="./data/hiragana.js" defer></script>
     <script src="./main.js" defer></script>
+    <script src="./ui.js" defer></script>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
