--- a/index.html
+++ b/index.html
@@ -1,51 +1,98 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hiragana Rush — Typing Trainer</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <link rel="manifest" href="./manifest.webmanifest" />
-    <meta name="theme-color" content="#0b0d12" />
-    <meta name="description" content="Juego rápido para practicar Hiragana. Escribe la romanización antes de que el tiempo se acabe." />
-  </head>
-  <body>
-    <div class="app">
-      <aside id="sidebar" role="navigation" aria-label="Modo de juego">
-        <div class="logo">Hiragana Rush</div>
-        <nav class="menu">
-          <button class="menu-item" data-mode="classic" aria-current="page">Clásico</button>
-          <button class="menu-item" data-mode="timeattack">Time Attack</button>
-          <button class="menu-item" data-mode="practice">Práctica</button>
-          <button class="menu-item" data-mode="custom">Personalizado</button>
-        </nav>
-        <div class="sidebar-footer">
-          <label class="switch">
-            <input id="themeToggle" type="checkbox" />
-            <span>🌙 Tema oscuro</span>
-          </label>
-        </div>
-      </aside>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Hiragana Rush</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- Botón hamburguesa -->
+  <button id="menuToggle"
+          class="hamburger"
+          aria-controls="sideMenu"
+          aria-expanded="false"
+          aria-label="Abrir menú de modos">☰</button>
 
-      <div class="shell">
-        <header class="topbar">
-          <button id="btnSidebar" aria-controls="sidebar" aria-expanded="true">☰</button>
-          <h1 id="viewTitle">Clásico</h1>
-        </header>
+  <!-- Drawer lateral -->
+  <aside id="sideMenu"
+         class="drawer"
+         role="dialog"
+         aria-modal="true"
+         aria-label="Selecciona el modo de juego">
+    <header class="drawer-header">
+      <h2>Modos de juego</h2>
+      <button id="closeMenu" class="icon-btn" aria-label="Cerrar menú">×</button>
+    </header>
+    <nav class="drawer-nav">
+      <button class="modeBtn" data-mode="clasic">Clásico</button>
+      <button class="modeBtn" data-mode="timeAttack">Time Attack</button>
+      <button class="modeBtn" data-mode="practice">Práctica</button>
+      <button class="modeBtn" data-mode="custom">Personalizado</button>
+    </nav>
+  </aside>
 
-        <main id="mainView" tabindex="-1"></main>
+  <!-- Backdrop -->
+  <div id="backdrop" class="backdrop" hidden></div>
+
+  <main class="container">
+    <h1 id="pageTitle">Hiragana Rush</h1>
+    <p class="subtitle">aprende + compite</p>
+
+    <h2 class="section-title">
+      <span id="current-mode-label">Clásico</span>
+    </h2>
+
+    <!-- FORM: agrupa cada opción en un wrapper con ID para poder ocultar/mostrar -->
+    <form id="gameForm" class="card">
+      <div id="group-difficulty" class="form-group">
+        <label for="difficulty">Dificultad</label>
+        <select id="difficulty">
+          <option value="easy">Fácil (gojūon básico)</option>
+          <option value="normal">Normal</option>
+          <option value="hard">Difícil</option>
+        </select>
       </div>
-    </div>
 
-    <script src="./data/hiragana.js" defer></script>
-    <script src="./main.js" defer></script>
-    <script src="./ui.js" defer></script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker.register("./service-worker.js").catch(console.error);
-        });
-      }
-    </script>
-  </body>
+      <div id="group-timePerChar" class="form-group">
+        <label for="timePerChar">Tiempo por carácter</label>
+        <select id="timePerChar">
+          <option value="10">10 s</option>
+          <option value="7">7 s</option>
+          <option value="5">5 s</option>
+          <option value="3">3 s</option>
+        </select>
+      </div>
+
+      <div id="group-totalTime" class="form-group">
+        <label for="totalTime">Tiempo total (s)</label>
+        <input id="totalTime" type="number" min="10" step="5" value="60" />
+      </div>
+
+      <div id="group-lives" class="form-group">
+        <label for="lives">Vidas</label>
+        <select id="lives">
+          <option value="3">3</option>
+          <option value="5">5</option>
+          <option value="∞">∞</option>
+        </select>
+      </div>
+
+      <!-- Ejemplo de switches extra -->
+      <fieldset id="group-switches" class="form-group">
+        <legend>Contras/sets</legend>
+        <label class="switch">
+          <input type="checkbox" id="useDigraphs" /> <span>Consonante+vocal (shi/chi/…)</span>
+        </label>
+        <label class="switch">
+          <input type="checkbox" id="useVoiced" /> <span>Sonidos sonoros (ga/za/…)</span>
+        </label>
+      </fieldset>
+
+      <button id="startBtn" type="button" class="primary">Comenzar</button>
+    </form>
+  </main>
+
+  <script src="app.js"></script>
+</body>
 </html>
